# api_android

./: .env  Cargo.toml
src/: db.rs  endpoints.rs  logger.rs  main.rs  structs.rs
