[package]
name = "api_android"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
chrono = "0.4.38"
log = "0.4.22"
anyhow = "1.0.89"
postgres = "0.19.9"
